--- a/WebApp/Views/index.html
+++ b/WebApp/Views/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <title></title>
-  <link href="contents/app.css" rel="stylesheet"/>
+  <link href="content/app.css" rel="stylesheet"/>
 </head>
 <body>
   <div id="app"></div>
-  <script src="contents/app.js"></script>
+  <script src="content/app.js"></script>
 </body>
 </html>
