add titles to page routines

--- a/src/App/Views/index.html
+++ b/src/App/Views/index.html
@@ -6,7 +6,7 @@
   <link href="content/app.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">Loading&hellip;</div>
   <script src="content/app.js"></script>
 </body>
 </html>
