center loading indicator

--- a/src/App/Views/index.html
+++ b/src/App/Views/index.html
@@ -6,7 +6,11 @@
   <link href="content/app.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="app">Loading&hellip;</div>
+<div id="app">
+  <div style="top:20%;left: 50%;transform: translate3d(-20%,-50%, 0);position: absolute;">
+      Loading&hellip; 
+  </div>
+</div>
   <script src="content/app.js"></script>
 </body>
 </html>
