--- a/src/App/js/app.scss
+++ b/src/App/js/app.scss
@@ -1,1 +1,2 @@
-﻿@import './node_modules/bulma/bulma.sass';
+﻿$modal-background-background-color: rgba(10, 10, 10, 0.5);
+@import './node_modules/bulma/bulma.sass';
