--- a/src/App/Views/index.html
+++ b/src/App/Views/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
   <link href="content/app.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" sizes="32x32" href="content/images/favicon.png" />
 </head>
 <body>
-<div id="app">
-  <div style="top:20%;left: 50%;transform: translate3d(-20%,-50%, 0);position: absolute;">
+  <div id="app">
+    <div style="top:20%;left: 50%;transform: translate3d(-20%,-50%, 0);position: absolute;">
       Loading&hellip;
+    </div>
   </div>
-</div>
   <script src="content/app.js"></script>
 </body>
 </html>
